--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="delete">Delete</string>
     <string name="update">Update</string>
     <string name="get">Get</string>
+    <string name="age">Age</string>
+    <string name="save">Save</string>
+    <string name="open">Open</string>
 </resources>
